--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
                     <div class="experience satu">
                         <h2>roadmap.sh</h2>
                         <p>Mengerjakan semua frontend project di roadmap.sh</p>
-                        <a href="https://roadmap.sh/frontend/projects">visit my profile</a>
+                        <a href="https://roadmap.sh/frontend/projects" target="_blank"  rel="noopener noreferrer">visit my profile</a>
                     </div>
                     <div class="experience dua">
                         <h2>OpenSource Work</h2>
                         <p>Berkontribusi ke 50 project opensource.</p>
-                        <a href="https://github.com/RevanyAngel/">visit my GitHub profile</a>
+                        <a href="https://github.com/RevanyAngel/" target="_blank" >visit my GitHub profile</a>
                     </div>
                 </section>
                 <section class="tengah-isi education">
